# Anki-Android

./: build.gradle
AnkiDroid/: build.gradle
AnkiDroid/src/main/java/com/ichi2/anki/: AnkiDroidApp.java  DeckPicker.java
AnkiDroid/src/main/java/com/ichi2/libanki/: Collection.java  Example.kt  IntegrityCheck.kt
AnkiDroid/src/main/java/net/ankiweb/rsdroid/: RSDroid.java
AnkiDroid/src/test/java/com/ichi2/libanki/: KotlinTest.kt  UtilsTest.java
api/: build.gradle
rsdroid/: Cargo.toml
rsdroid/src/: lib.rs
