[package]
name = "rsdroid"
version = "0.1.0"
authors = ["Damien Elmes <gpg@ankiweb.net>"]
edition = "2018"

[lib]
crate_type = ["dylib"]

[dependencies]
jni = { version = "0.5.2", default-features = false }
anki = { git = "https://github.com/ankitects/anki.git", tag = "2.1.21" }
serde_derive = "1.0.104"
serde = "1.0.104"
serde_json = "1.0.48"
